# monzo-api

./: .dcignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  SECURITY.md  SECURITY.rst  SETUP.md  TODO.md  TODO.rst  pyproject.toml  setup.cfg  sonar-project.properties
.claude/agents/: security-lead.md
.claude/commands/: ask-security-lead.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  codeql-analysis.yml  flake8.yml  isort.yml  mutation.yml  mypy.yml  pre-commit.yml  publish.yml  pypi.yml  pytest.yml  uv.yml  zizmor.yml
.sonarlint/: connectedMode.json
docs/source/: access_token.rst  api_observations.rst  basic_api_queries.rst  conf.py  developers.rst  index.rst  license.rst  modules.rst  monzo.endpoints.rst  monzo.handlers.rst  monzo.rst  monzo.viewer.html.rst  monzo.viewer.rst  monzo_setup.rst  refreshing_tokens.rst  tutorials.rst  viewer.rst
examples/: auth_step_01.py  auth_step_02.py  create_feed_item.py  get_accounts.py  get_whoami.py  step-01.py  step-02.py
monzo/: authentication.py  exceptions.py  helpers.py  httpio.py  monzo.py
monzo-server/: monzo_server.py
monzo/endpoints/: __init__.py  account.py  attachment.py  balance.py  feed_item.py  monzo.py  pot.py  receipt.py  transaction.py  webhooks.py  whoami.py
monzo/handlers/: echo.py  filesystem.py  storage.py
monzo/viewer/: __init__.py  controller.py  filesystem.py  handler.py  monzo_data.py  server.py
monzo/viewer/html/: 404.html  auth_step_one.html  auth_step_two.html  auth_tokens.html  index.html  monzo.css  raw_request.html
monzo/viewer2/: __init__.py  handler.py
tests/: helpers.py  test_authentication.py  test_endpoints.py  test_httpio_errors.py  test_payload.py  test_storage_handlers.py
tests/mock_payloads/: Accounts.json  Annotate.json  Balance.json  FeedItem.json  Logout.json  Receipt.json  ReceiptCreate.json  ReceiptDelete.json  Transaction.json  TransactionFetchSingle.json  Webhooks.json  WebhooksCreate.json  WebhooksDelete.json  WhoAmI.json
tests/mock_responses/: Accounts_Flex_Loan_Type.json  Accounts_Flex_Type.json  Accounts_Loan_Type.json  Accounts_Unknown_Type.json  Annotate.json  Balance.json  FeedItem.json  Logout.json  Receipt.json  ReceiptCreated.json  ReceiptDeleted.json  Transaction.json  TransactionFetchSingle.json  WebhooksCreated.json  WebhooksDeleted.json  WebhooksNone.json  WebhooksOne.json  WhoAmI.json
tests/storage/: standard.json  standard_no_refresh.json
