[project]
name = "Monzo-API"
version = "1.2.2"
authors = [{ name = "Peter McDonald", email = "git@petermcdonald.co.uk"}]
description = "Package to interact with the API provided by Monzo bank"
keywords = ["monzo", "bank", "api"]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.10"

classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/petermcd/monzo-api"
repository = "https://github.com/petermcd/monzo-api.git"
issues = "https://github.com/petermcd/monzo-api/issues"
documentation = "https://monzo-api.readthedocs.io"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.3",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "ty>=0.0.1a25",
]

[tool.pytest.ini_options]
addopts = "--cov=monzo --cov-report term-missing --cov-report xml:coverage.xml"

[tool.ruff]
line-length = 120
