[project]
name = "Monzo-API"
version = "1.2.3"
authors = [{ name = "Peter McDonald", email = "git@petermcdonald.co.uk"}]
description = "Package to interact with the API provided by Monzo bank"
keywords = ["monzo", "bank", "api"]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.12"

classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Topic :: Office/Business :: Financial",
  "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/petermcd/monzo-api"
repository = "https://github.com/petermcd/monzo-api.git"
issues = "https://github.com/petermcd/monzo-api/issues"
documentation = "https://monzo-api.readthedocs.io"

[dependency-groups]
dev = [
    "idna>=3.16", # To resolve security vulnerabilities in dependencies pip-audit
    "pygments>=2.20.0", # To resolve security vulnerabilities in dependencies pytest sphinx
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
    "sphinx>=9.1.0",
    "sphinx-rtd-theme>=3.1.0",
    "troml>=0.4.1",
    "ty>=0.0.29",
    "urllib3>=2.7.0", # To resolve security vulnerabilities in dependencies pip-audit
]

[tool.pytest.ini_options]
addopts = "--cov=monzo --cov-report term-missing --cov-report xml:coverage.xml"

[tool.ruff]
line-length = 120
