[metadata]
name = monzo-api
version = 0.0.3
author = Peter McDonald
author_email = git@petermcdonald.co.uk
description = Package to interact with the API provided by Monzo bank
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petermcd/monzo-api
project_urls = Bug Tracker = https://github.com/petermcd/monzo-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = monzo
python_requires = >=3.7

[options.extras_require]
test = flake8; isort; mypy

[flake8]
max_line_length = 120
