[metadata]
name = Monzo API
version = 1.1.0
author = Peter McDonald
author_email = git@petermcdonald.co.uk
description = Package to interact with the API provided by Monzo bank
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/petermcd/monzo-api
project_urls =
    Bug Tracker = https://github.com/petermcd/monzo-api/issues
    Documentation = https://monzo-api.readthedocs.io
    Source = https://github.com/petermcd/monzo-api
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
test = flake8; isort; mypy; pytest; pytest-mock;
build = wheel; build;
docs = sphinx; sphinx_rtd_theme;

[flake8]
max_line_length = 120
